# OpenGL3D

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
Components/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Lights.cpp  Lights.h
Core/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Handlers.h  Input.cpp  Input.h  Scene.cpp  Scene.h  ShaderManager.cpp  ShaderManager.h  Time.cpp  Time_.h  Window.cpp  Window.h
Render/: Buffer.cpp  Buffer.h  Material.cpp  Material.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  ShaderTypes.h  Texture.cpp  Texture.h  shaderClass.cpp  shaderClass.h
Render/GPU/: Buffer.cpp  Buffer.h  Texture.cpp  Texture.h  shaderClass.cpp  shaderClass.h
assets/models/: Crow_rig.gltf  super.gltf
assets/models/game_room/: game room.gltf
assets/shaders/: blank.frag  blank.vert  default.frag  default.vert  pbr.frag  pbr.vert  unlit.frag  unlit.vert
headers/: Engine.h  Window.h
src/: Engine.cpp  main.cpp
